--- a/public/css/style.css
+++ b/public/css/style.css
@@ -204,6 +204,8 @@
   .signup-parent {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+    
   }
   
   .signup-child {
