addd user page login signup add product go to farmer page

--- a/views/cropCard.pug
+++ b/views/cropCard.pug
@@ -21,4 +21,4 @@
     .signup-button
       a.btn.btn-full(href='#') Buy Now
     .signup-button
-      a.btn.btn-full(href='#') Contact Farmer
+      a(href=`/cropFarmerPage/${crop["_id"]}`).btn.btn-full Contact Farmer
