--- a/views/profile.pug
+++ b/views/profile.pug
@@ -1,3 +1,10 @@
 extend base
 block content
-  h1 #{user}
+    h1=user.name
+    h1=user.phone
+    h1=user.email
+    h1=user.address
+    h1=user.role
+    h1=user.password
+    -console.log(user);
+  
